ontol/ontol-compiler/test-cases/error/known_bugs/explicit_struct_path.on
// BUG: inline struct in the first def is valid,
// so this should probably be valid in map too.
// The workaround is to extract 'inner' as an explicit def.

def foo (
    rel* 'inner': (
        rel* 'foo_inner': text
    )
)

def bar (
    rel* 'inner': text
)

map (
    foo (
        'inner': ( // ERROR expected explicit struct path
            'foo_inner': fi
        )
    ),
    bar (
        'inner': fi
    )
)
